testsuite/tests/grammar/invalid_lexers/case_5.lkt
import common

lexer foo_example {
    Foo <- null
    match p"foo" {
        if previous_token is Foo | Bar then send(Foo, 3)
        else send(Foo, 3)
    }
}
